--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,21 +2,63 @@ body {
   font-family: Helvetica;
   text-align: center;
 }
-
+/*
+      -------------------
+      header
+      -------------------
+*/
 .top-nav {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
   color: white;
   text-align: center;
 }
 
-.top-nav a {
+.top-nav h1 {
+  font-size: 70px;
+  font-weight: bold;
+}
+
+a {
   color: white;
 }
 
-.midpage-banner {
-  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+/*
+      -------------------
+      mid page
+      -------------------
+*/
+
+h2 {
+  font-size: 32px;
+  font-weight: bold;
 }
 
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+
+
+.midpage-banner {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  color: white;
+}
+
+/*
+      -------------------
+      bottom
+      -------------------
+*/
+
+
 footer {
-  background-color: grey;
+  background-color: dimgrey;
+  color: white;
+  text-align: left;
+}
+
+footer p, nav {
+  display: inline-block;
+  align-items: flex-start;
+  text-align: left;
 }
